--- a/less/header.less
+++ b/less/header.less
@@ -49,7 +49,7 @@ header {
 					padding: 0;
 					list-style-type: none;
 
-					&:hover  ul {
+					&.open  ul {
 						display: block;
 					}
 				}
@@ -70,6 +70,7 @@ header {
 
 					background-color: white;
 					border-top: 1px solid #ccc;
+					z-index: 200;
 
 					li {
 						padding: 8px;
